--- a/parts/cvsservice/logformbase.ui
+++ b/parts/cvsservice/logformbase.ui
@@ -23,6 +23,14 @@
             <property name="name">
                 <cstring>contents</cstring>
             </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>3</hsizetype>
+                    <vsizetype>3</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
             <property name="text">
                 <string></string>
             </property>
